[package]
name = "bitcoin-scan-sighash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


bitcoincore-rpc = {git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc"}
rayon = "1.5.1"
simple-logging = "2.0.2"
log = "0.4.14"
structopt = "0.3"